# inputstream.ffmpegdirect

./: CMakeLists.txt
depends/android/gmp/: CMakeLists.txt
depends/android/zvbi/: 01-zvbi-android-pthread_testcancel.patch
depends/common/ffmpeg/: 04-hack-fix.patch  CMakeLists.txt  deps.txt  windows-deps.txt
depends/common/gmp/: CMakeLists.txt
depends/common/gnutls/: 03-fix-build-test-with-this-as-static-on-ffmpeg.patch  gnutls.txt
depends/common/libpng/: 01-make-private-public-for-static-on-libpng.pc.in.patch
depends/common/nettle/: CMakeLists.txt  nettle.sha256  nettle.txt
depends/common/zvbi/: CMakeLists.txt
depends/windows/iconv/: 01-Win-UWP-fix.patch
depends/windows/libxml2/: 03-fix-build-test-with-this-as-static-on-ffmpeg.patch  CMakeLists.txt  deps.txt
depends/windows/mingw/: 01-MinGWConfig.cmake.in.patch  02-caller.sh.patch  CMakeLists.txt
depends/windows/xz-utils/: 01-add-xz-config.cmake.patch
inputstream.ffmpegdirect/: addon.xml.in  changelog.txt
src/stream/: FFmpegStream.cpp
src/stream/url/: URL.cpp
